2011-09-16  Simson Garfinkel  <simsong@Alphonse-Mucha.local>

	* src/sha256.c (hash_init_sha256): added casts

	* configure.ac: added -fast and a ton of more warnings

	* configure.ac: now removes -fast flag if not optimizing

	* src/sha256.c (hash_update_sha256): added casts to avoid void *.

	* src/md5.c (hash_final_md5): added casts to avoid void *.

	* src/sha1.h: noted that SHA1Transform now takes a const buffer.

	* src/sha1.c (SHA1Final): added #define SHA1HANDSOFF so that it won't modify the buffer passed in.
	(hash_final_sha1): added casts to avoid void *.

2011-09-12 Jesse Kornblum

	* tests/tests.sh: Fixed typo
	

2011-09-11  Simson Garfinkel  <simsong@FC15>

	* configure.ac (INCLUDE_NP): added define for INCLUDE_NP

	* src/display.cpp (display_realtime_stats): removed setting shorten variable, since now we simply shorten where it is needed, rather than setting a variable and checking it elsewhere.

	* src/xml.cpp: moved defines of O_BINARY, et all, out of #ifdef

	* src/files.cpp (md5deep_load_match_file): removed setting status, because return code is now ignored. (errors in parse_encase_file are no longer reported)

2011-08-24  User  <user@ubuntu>

	* configure.ac: AM_CONFIG_HEADER changes to AC_CONFIG_HEADERS

2011-08-22 Jesse Kornblum

	* bootstrap-mingw.sh: Added support for mingw on Ubuntu

2011-08-22  Simson Garfinkel  <simsong@Alphonse-Mucha.local>

	* src/display.cpp (display::error_filename): moved lock to around dfxml

2011-08-17  Simson Garfinkel  <simsong@mncrnpsedu.local>

	* src/display.cpp (display::error_filename): error_filename now properly prints to DFXML


2011-08-14  Simson Garfinkel  <simsong@t.nitroba.org>

	* src/main.h (d): added __attribute__ ((format(printf))) to all printf-like functions

	* src/display.cpp (error): removed print_error(), since it did the same thing that error() did.

	* src/main.h (d): added __attribute__ ((__noreturn__)) to fatal_error

2011-08-12  Simson Garfinkel  <simsong@t.nitroba.org>
