@@ -37,9 +37,9 @@ void MD5Update(context_md5_t *context, const unsigned char *buf, size_t len);
 void MD5Final(unsigned char digest[16], context_md5_t *context);
 void MD5Transform(uint32_t buf[4], uint32_t const in[16]);
 
-int hash_init_md5(void * ctx);
-int hash_update_md5(void *ctx, const unsigned char *buf, size_t len);
-int hash_final_md5(void *ctx, unsigned char *digest);
+void hash_init_md5(void * ctx);
+void hash_update_md5(void *ctx, const unsigned char *buf, size_t len);
+void hash_final_md5(void *ctx, unsigned char *digest);
 
 __END_DECLS
 
